--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "backend": "nodemon index.js"
+    "backend": "nodemon index.js",
+    "dev": "concurrently \"npm run backend\" \"cd frontend && npm run start\""
   },
   "repository": {
     "type": "git",
@@ -20,13 +21,16 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "monk": "^7.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
 }
