--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "10.x",
-    "npm": "6.x"
+    "node": "10.16.3",
+    "npm": "6.14.6"
   },
   "scripts": {
     "start": "node index.js",
