--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -35,7 +36,6 @@
     ]
   },
   "devDependencies": {
-    "http-proxy-middleware": "^1.0.5",
-    "react-app-rewired": "^2.1.6"
+    "http-proxy-middleware": "^1.0.5"
   }
 }
